# renderers-xsl

./: README.rst  pyproject.toml  setup.cfg  setup.py
nagare/renderers/: xsl.py  xsl2.py  xsl3.py
src/nagare/renderers/: xsl.py  xsl2.py  xsl3.py
tests/: helloworld.html  test_namespaces.py  test_xmlns_1.xml  test_xsl.py
